--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ anyio==4.8.0
 asyncpg==0.30.0
 bcrypt==4.3.0
 certifi==2025.1.31
+cffi==1.17.1
 click==8.1.8
+cryptography==44.0.2
+ecdsa==0.19.0
 fastapi==0.115.10
 greenlet==3.1.1
 h11==0.14.0
@@ -16,13 +19,20 @@ Mako==1.3.9
 MarkupSafe==3.0.2
 ollama==0.4.7
 packaging==24.2
+passlib==1.7.4
 pluggy==1.5.0
 py4j==0.10.9.7
+pyasn1==0.4.8
+pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 pyspark==3.5.4
 pytest==8.3.4
+pytest-asyncio==0.25.3
+python-jose==3.4.0
 PyYAML==6.0.2
+rsa==4.9
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.46.0
