--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ click==8.1.8
 cryptography==44.0.2
 ecdsa==0.19.0
 fastapi==0.115.10
+future==1.0.0
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
@@ -21,14 +22,18 @@ ollama==0.4.7
 packaging==24.2
 passlib==1.7.4
 pluggy==1.5.0
+pure-sasl==0.6.2
 py4j==0.10.9.7
 pyasn1==0.4.8
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+PyHive==0.7.0
+PyJWT==2.10.1
 pyspark==3.5.4
 pytest==8.3.4
 pytest-asyncio==0.25.3
+python-dateutil==2.9.0.post0
 python-jose==3.4.0
 PyYAML==6.0.2
 rsa==4.9
@@ -36,5 +41,7 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.46.0
+thrift==0.21.0
+thrift-sasl==0.4.3
 typing_extensions==4.12.2
 uvicorn==0.34.0
