--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2025.1.31
 cffi==1.17.1
 click==8.1.8
 cryptography==44.0.2
+distro==1.9.0
 ecdsa==0.19.0
 fastapi==0.115.10
 future==1.0.0
@@ -16,9 +17,11 @@ httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 iniconfig==2.0.0
+jiter==0.8.2
 Mako==1.3.9
 MarkupSafe==3.0.2
 ollama==0.4.7
+openai==1.65.5
 packaging==24.2
 passlib==1.7.4
 pluggy==1.5.0
@@ -34,8 +37,10 @@ pyspark==3.5.4
 pytest==8.3.4
 pytest-asyncio==0.25.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-jose==3.4.0
 PyYAML==6.0.2
+redis==5.2.1
 rsa==4.9
 six==1.17.0
 sniffio==1.3.1
@@ -43,5 +48,6 @@ SQLAlchemy==2.0.38
 starlette==0.46.0
 thrift==0.21.0
 thrift-sasl==0.4.3
+tqdm==4.67.1
 typing_extensions==4.12.2
 uvicorn==0.34.0
